Fix scrollbars styles

--- a/src/index.css
+++ b/src/index.css
@@ -17,20 +17,19 @@
   .phone-island-container ::after {
     @apply pi-box-border pi-border-0 pi-border-solid pi-border-gray-800;
   }
-
-  .pi-custom-scrollbar::-webkit-scrollbar {
+  .phone-island-container *::-webkit-scrollbar {
     @apply pi-w-2;
   }
 
-  .pi-custom-scrollbar::-webkit-scrollbar-track {
+  .phone-island-container *::-webkit-scrollbar-track {
     @apply pi-rounded-full;
   }
 
-  .pi-custom-scrollbar::-webkit-scrollbar-thumb {
+  .phone-island-container *::-webkit-scrollbar-thumb {
     @apply pi-bg-gray-500 pi-rounded-full pi-border-none pi-duration-200 pi-transform pi-transition-colors;
   }
 
-  .pi-custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  .pi-custom-scrollbar *::-webkit-scrollbar-thumb:hover {
     @apply pi-bg-gray-400;
   }
 }
